<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#29C8A3">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#0C0C0C"
        android:text="@string/firstpg2"
        android:textAlignment="center"
        android:textColor="#F6F6F6"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSuhu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="#0C0C0C"
        android:text="0"
        android:textAlignment="center"
        android:textColor="#F6F6F6"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOk" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#0C0C0C"
        android:text="@string/suhu"
        android:textAlignment="center"
        android:textColor="#F6F6F6"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSuhu" />

    <TextView
        android:id="@+id/txtUdara"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:background="#0C0C0C"
        android:text="-"
        android:textAlignment="center"
        android:textColor="#F6F6F6"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#0C0C0C"
        android:text="@string/udara"
        android:textAlignment="center"
        android:textColor="#F6F6F6"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUdara" />

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="412dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:background="#0C0C0C"
        android:textAlignment="center"
        android:textColor="#F6F6F6"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/btnOk"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="125dp"
        android:layout_height="122dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="60dp"
        android:background="#000000"
        android:outlineAmbientShadowColor="#000000"
        android:outlineSpotShadowColor="#000000"
        android:shadowColor="#000000"
        android:text="@string/bukatutup"
        android:textColor="#F6F6F6"
        android:textColorHighlight="#000000"
        android:textColorLink="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:rippleColor="#0E0E0E"
        app:strokeColor="#000000" />

    <Button
        android:id="@+id/btnCctv"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="125dp"
        android:layout_height="122dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="56dp"
        android:background="#000000"
        android:outlineAmbientShadowColor="#000000"
        android:outlineSpotShadowColor="#000000"
        android:shadowColor="#000000"
        android:text="@string/cctv"
        android:textColor="#F6F6F6"
        android:textColorHighlight="#000000"
        android:textColorLink="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:rippleColor="#0E0E0E"
        app:strokeColor="#000000" />

</androidx.constraintlayout.widget.ConstraintLayout>